Add blog component; add dark theme

--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"mdsvex": "^0.11.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-adapter-appengine": "^0.10.2",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource/jetbrains-mono": "^5.0.17",
+		"@fontsource/manrope": "^5.0.17",
+		"lucide-svelte": "^0.292.0",
+		"open-props": "^1.6.10",
+		"shiki": "^0.14.5"
+	}
 }
