--- a/package.json
+++ b/package.json
@@ -10,24 +10,29 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"@sveltejs/adapter-auto": "^2.1.1",
+		"@sveltejs/kit": "^1.27.5",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.53.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-svelte": "^2.35.0",
+		"flowbite": "^2.1.1",
+		"flowbite-svelte": "^0.44.19",
 		"mdsvex": "^0.11.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-adapter-appengine": "^0.10.2",
-		"vite": "^4.2.0"
+		"postcss": "^8.4.31",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.1.0",
+		"svelte": "^4.2.3",
+		"svelte-adapter-appengine": "^0.10.3",
+		"tailwindcss": "^3.3.5",
+		"vite": "^4.5.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fontsource/jetbrains-mono": "^5.0.17",
 		"@fontsource/manrope": "^5.0.17",
 		"lucide-svelte": "^0.292.0",
-		"open-props": "^1.6.10",
+		"open-props": "^1.6.11",
 		"shiki": "^0.14.5"
 	}
 }
